--- a/src/components/Channels/index.module.scss
+++ b/src/components/Channels/index.module.scss
@@ -1,4 +1,16 @@
 
+
+ion-card {
+  padding: 15px;
+}
+.ionCard {
+  //width: 33%;
+  padding: 20px;
+
+  ion-button {
+    width: 100%;
+  }
+}
 .chatListItem {
   position: relative;
   height: 68px;
@@ -95,4 +107,85 @@
   --padding-start: 16px;
   margin-right: 8px;
   margin-bottom: 20px;
+}
+
+.searchUserBox {
+  margin-top: 20px;
+  margin-bottom: 100px;
+  display: flex;
+  margin-right: 24px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  height: 44px;
+  border: 1px solid #DDE8E8;
+  padding-right: 20px;
+
+
+  .searchTypeBox {
+    position: relative;
+    border-right: 1px solid #DDE8E8;
+    padding: 10px 20px;
+    width: 20%;
+    .searchType {
+      display: flex;
+      align-items: center;
+      font-size: 16px;
+      ion-icon {
+        margin-left: 8px;
+      }
+
+    }
+
+    .selectSearchType {
+      display: none;
+      position: absolute;
+      left: 0;
+      top: 40px;
+      z-index: 99;
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+      li {
+        text-align: center;
+        width: 100px;
+        height: 30px;
+        //background: #fff;
+        background-color: rgb(236, 235, 235);
+        font-size: 16px;
+        line-height: 30px;
+      }
+      li:hover {
+        background-color: #fff;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      .selectSearchType {
+        display: block;
+      }
+    }
+  }
+
+  .input {
+    //border: 1px solid #DDE8E8;
+    border-radius: 4px;
+    padding-left: 16px;
+    --padding-start: 16px
+  }
+
+
+  .searchButton {
+    cursor: pointer;
+    color: #333;
+    font-size: 24px;
+  }
+  .searchButton:hover {
+    color: #000;
+    font-size: 26px;
+
+  }
+
 }
