--- a/src/components/MobileDemo/index.module.scss
+++ b/src/components/MobileDemo/index.module.scss
@@ -1,14 +1,99 @@
 
+ion-card {
+  padding: 15px;
+}
+
+.ionCard {
+  //width: 33%;
+  padding: 20px;
+
+  ion-button {
+    width: 100%;
+  }
+}
+
 .demoContent {
   --padding-start: 20px;
   --padding-end: 20px;
   height: 500px;
-  .messageBox {
-    padding-top: 30px;
+  // 新版ui
+  .messagesContent {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-height: 90%;
+
+    .messageBox {
+      width: 100%;
+      border-bottom: 1px solid #F2F2F2;
+      padding: 10px 15px 15px;
+      position: relative;
+
+      .userTitleBox {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 24px;
+
+        .userInfoBox {
+          display: flex;
+
+          img {
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+          }
+
+          .username {
+            margin-left: 10px;
+            font-family: 'Helvetica Neue', sans-serif;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 23px;
+            color: #000000;
+          }
+
+          .createAt {
+            margin-left: 8px;
+            font-family: 'Helvetica Neue', sans-serif;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 11px;
+            line-height: 19px;
+            color: #4C5667;
+          }
+        }
+      }
+
+      .messageBodyContentBox {
+        display: flex;
+
+        .messageContentsText {
+          width: 100%;
+          margin-top: 5px;
+          padding-left: 34px;
+          //padding-right: 33px;
+          font-family: 'Helvetica Neue', sans-serif;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 23px;
+          color: #424242;
+
+          a {
+            text-decoration: none;
+            color: #5a67e2;
+          }
+        }
+      }
+    }
   }
 
+
 }
-.footer{
+
+.footer {
   display: flex;
   background: #fff;
   border: 1px solid #F2F2F2;
@@ -26,14 +111,14 @@
     --padding-start: 16px;
     margin-right: 8px;
   }
+
   ion-button {
     width: 50px;
   }
 }
 
 
-
-.demoNoLogin{
+.demoNoLogin {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
@@ -47,10 +132,13 @@
   justify-content: center;
   align-items: center;
   padding: 0 50px;
+
   h1 {
     color: #333;
   }
+
   .button {
     width: 50%;
   }
 }
+
