--- a/src/components/SendNotify/index.module.scss
+++ b/src/components/SendNotify/index.module.scss
@@ -1,3 +1,16 @@
+ion-card {
+  padding: 15px;
+}
+
+.ionCard {
+  //width: 33%;
+  padding: 20px;
+
+  ion-button {
+    width: 100%;
+  }
+}
+
 .messageInput {
   border: 1px solid #ccc;
   height: 50px;
