--- a/src/components/Channels/index.module.scss
+++ b/src/components/Channels/index.module.scss
@@ -1,8 +1,8 @@
 
-
 ion-card {
   padding: 15px;
 }
+
 .ionCard {
   //width: 33%;
   padding: 20px;
@@ -11,6 +11,7 @@ ion-card {
     width: 100%;
   }
 }
+
 .chatListItem {
   position: relative;
   height: 68px;
@@ -99,6 +100,7 @@ ion-card {
 
   }
 }
+
 .messageInput {
   border: 1px solid #ccc;
   height: 50px;
@@ -111,7 +113,7 @@ ion-card {
 
 .searchUserBox {
   margin-top: 20px;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   display: flex;
   margin-right: 24px;
   width: 100%;
@@ -127,10 +129,12 @@ ion-card {
     border-right: 1px solid #DDE8E8;
     padding: 10px 20px;
     width: 20%;
+
     .searchType {
       display: flex;
       align-items: center;
       font-size: 16px;
+
       ion-icon {
         margin-left: 8px;
       }
@@ -141,12 +145,14 @@ ion-card {
       display: none;
       position: absolute;
       left: 0;
-      top: 40px;
+      top: -93px;
       z-index: 99;
+
       ul {
         margin: 0;
         padding: 0;
       }
+
       li {
         text-align: center;
         width: 100px;
@@ -156,6 +162,7 @@ ion-card {
         font-size: 16px;
         line-height: 30px;
       }
+
       li:hover {
         background-color: #fff;
       }
@@ -163,6 +170,7 @@ ion-card {
 
     &:hover {
       cursor: pointer;
+
       .selectSearchType {
         display: block;
       }
@@ -182,10 +190,45 @@ ion-card {
     color: #333;
     font-size: 24px;
   }
+
   .searchButton:hover {
     color: #000;
     font-size: 26px;
 
+  }
+
+}
+
+.emptyUserText {
+  //font-size: 24px
+  position: relative;
+  padding: 0 50px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-size: 20px;
+
+  .bottom {
+    font-size: 16px;
+  }
+
+  .bottom:hover {
+    text-decoration: underline;
+    cursor: pointer;
+
+    .copyTopic {
+      display: block;
+    }
+  }
+
+
+  .copyTopic {
+    position: absolute;
+    bottom: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    margin-left: calc(50% - 50px);
+    transform: translateX(-50%);
+    display: none;
   }
 
 }
