--- a/src/components/MobileDemo/index.module.scss
+++ b/src/components/MobileDemo/index.module.scss
@@ -12,7 +12,18 @@ ion-card {
   }
 }
 
+ion-header {
+  border: 1px solid #F2F2F2;
+  border-bottom: none;
+
+  ion-toolbar {
+    --border-width: 0 !important;
+  }
+}
+
 .demoContent {
+  border: 1px solid #F2F2F2;
+  border-top: none;
   --padding-start: 20px;
   --padding-end: 20px;
   height: 500px;
@@ -97,10 +108,9 @@ ion-card {
   display: flex;
   background: #fff;
   border: 1px solid #F2F2F2;
-  border-bottom: none;
+  border-top: none;
   box-shadow: 0px -12px 10px rgba(30, 83, 133, 0.03);
-  padding-top: 16px;
-  //padding-bottom: 16px;
+  padding: 16px 10px;
   transition: width 2s;
   -webkit-transition: width 2s; /* Safari */
 
