--- a/src/components/Channels/index.module.scss
+++ b/src/components/Channels/index.module.scss
@@ -3,14 +3,7 @@ ion-card {
   padding: 15px;
 }
 
-.ionCard {
-  //width: 33%;
-  padding: 20px;
 
-  ion-button {
-    width: 100%;
-  }
-}
 
 .chatListItem {
   position: relative;
@@ -103,8 +96,9 @@ ion-card {
 
 .messageInput {
   border: 1px solid #ccc;
-  height: 50px;
-  border-radius: 4px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 8px;
   padding-left: 16px;
   --padding-start: 16px;
   margin-right: 8px;
@@ -112,7 +106,7 @@ ion-card {
 }
 
 .searchUserBox {
-  margin-top: 20px;
+  margin-top: 18px;
   margin-bottom: 20px;
   display: flex;
   margin-right: 24px;
@@ -120,6 +114,7 @@ ion-card {
   justify-content: space-between;
   align-items: center;
   height: 44px;
+  border-radius: 8px;
   border: 1px solid #DDE8E8;
   padding-right: 20px;
 
