--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -1,15 +1,14 @@
 
-ion-card {
-  padding: 15px;
-}
 
-.ionCard {
-  //width: 33%;
+.contactsPanel {
+  display: flex;
   padding: 20px;
-
-  ion-button {
-    width: 100%;
-  }
+  flex-direction: column;
+  align-items: flex-start;
+  width: 448px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
 }
 
 .chatListItem {
