--- a/src/components/MobileDemo/index.module.scss
+++ b/src/components/MobileDemo/index.module.scss
@@ -1,4 +1,3 @@
-
 ion-card {
   padding: 15px;
 }
@@ -9,9 +8,8 @@ ion-card {
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-
   height: 756px;
-  background: #FFFFFF;
+  background: #ffffff;
   /* shadow/Small */
 
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
@@ -22,12 +20,41 @@ ion-card {
   ion-button {
     width: 100%;
   }
+
+  .header {
+    display: flex;
+    padding: 0 19px;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+    width: 100%;
+    border-bottom: 1px solid #dde8e8;
+
+    .pointer {
+      cursor: pointer;
+    }
+  }
+
+  .chatTitle {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    .title {
+      margin-left: 10px;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 22px;
+      color: #18181b;
+    }
+  }
 }
 
 .notLoginMask {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.3);
   z-index: 10;
   position: absolute;
   top: 0;
@@ -37,11 +64,30 @@ ion-card {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 50px;
-  border-radius: 12px;
+  padding: 48px;
 
-  h1 {
-    color: #333;
+  border-radius: 12px;
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .largeTip {
+    svg {
+      width: 40px;
+      height: 40px;
+    }
+  }
+  .tip {
+    margin-top: 16px;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #71717a;
   }
 
   .button {
@@ -50,7 +96,7 @@ ion-card {
 }
 
 ion-header {
-  border: 1px solid #F2F2F2;
+  border: 1px solid #f2f2f2;
   border-bottom: none;
 
   ion-toolbar {
@@ -59,11 +105,11 @@ ion-header {
 }
 
 .demoContent {
-  border: 1px solid #F2F2F2;
   border-top: none;
   --padding-start: 20px;
   --padding-end: 20px;
   height: 500px;
+
   .messagesContent {
     position: absolute;
     bottom: 0;
@@ -72,7 +118,7 @@ ion-header {
 
     .messageBox {
       width: 100%;
-      border-bottom: 1px solid #F2F2F2;
+      border-bottom: 1px solid #f2f2f2;
       padding: 10px 15px 15px;
       position: relative;
 
@@ -93,7 +139,7 @@ ion-header {
 
           .username {
             margin-left: 10px;
-            font-family: 'Helvetica Neue', sans-serif;
+            font-family: "Helvetica Neue", sans-serif;
             font-style: normal;
             font-weight: 700;
             font-size: 12px;
@@ -103,12 +149,12 @@ ion-header {
 
           .createAt {
             margin-left: 8px;
-            font-family: 'Helvetica Neue', sans-serif;
+            font-family: "Helvetica Neue", sans-serif;
             font-style: normal;
             font-weight: 500;
             font-size: 11px;
             line-height: 19px;
-            color: #4C5667;
+            color: #4c5667;
           }
         }
       }
@@ -121,7 +167,7 @@ ion-header {
           margin-top: 5px;
           padding-left: 34px;
           //padding-right: 33px;
-          font-family: 'Helvetica Neue', sans-serif;
+          font-family: "Helvetica Neue", sans-serif;
           font-style: normal;
           font-weight: 400;
           font-size: 16px;
@@ -136,23 +182,22 @@ ion-header {
       }
     }
   }
-
-
 }
 
 .footer {
   display: flex;
+  flex-direction: row;
   background: #fff;
-  border: 1px solid #F2F2F2;
-  border-top: none;
-  box-shadow: 0px -12px 10px rgba(30, 83, 133, 0.03);
-  padding: 16px 10px;
-  transition: width 2s;
-  -webkit-transition: width 2s; /* Safari */
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  height: 72px;
+  gap: 8px;
+  border-radius: 0 0 12px 12px;
 
   .messageInput {
-    border: 1px solid #DDE8E8;
-    border-radius: 4px;
+    border: 1px solid #dde8e8;
+    border-radius: 50px;
     padding-left: 16px;
     --padding-start: 16px;
     margin-right: 8px;
@@ -162,5 +207,3 @@ ion-header {
     width: 50px;
   }
 }
-
-
