--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -1,14 +1,38 @@
-
-
 .contactsPanel {
   display: flex;
-  padding: 20px;
   flex-direction: column;
   align-items: flex-start;
-  width: 448px;
-  background: #FFFFFF;
+  width: 528px;
+  background: #ffffff;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
+
+  .contactTabs {
+    width: 100%;
+    height: 46px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
+    border-bottom: .5px solid #f2fafa;
+    .tab {
+      padding: 13px 0;
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
+      color: #A1A1AA;
+      cursor: pointer;
+      box-sizing: border-box;
+    
+
+      &.active {
+        color: #663CEE;
+        border-bottom: 3px solid #663CEE;
+      }
+    }
+  }
 }
 
 .chatListItem {
@@ -47,7 +71,7 @@
       font-size: 14px;
       line-height: 24px;
       align-items: start;
-      color: #0F1828;
+      color: #0f1828;
       margin-bottom: 2px;
     }
 
@@ -68,7 +92,7 @@
       font-size: 10px;
       line-height: 16px;
       align-items: start;
-      color: #BDBDBD;
+      color: #bdbdbd;
       margin-bottom: 2px;
     }
 
@@ -96,7 +120,6 @@
   &:hover {
     cursor: pointer;
     border-color: #4b7ef7;
-
   }
 }
 
@@ -119,15 +142,13 @@
   justify-content: space-between;
   align-items: center;
   height: 44px;
-  border: 1px solid #DDE8E8;
+  border: 1px solid #dde8e8;
   padding-right: 20px;
-
 
   .searchTypeBox {
     position: relative;
-    border-right: 1px solid #DDE8E8;
+    border-right: 1px solid #dde8e8;
     padding: 10px 20px;
-    width: 20%;
 
     .searchType {
       display: flex;
@@ -137,7 +158,6 @@
       ion-icon {
         margin-left: 8px;
       }
-
     }
 
     .selectSearchType {
@@ -180,9 +200,8 @@
     //border: 1px solid #DDE8E8;
     border-radius: 4px;
     padding-left: 16px;
-    --padding-start: 16px
+    --padding-start: 16px;
   }
-
 
   .searchButton {
     cursor: pointer;
@@ -193,9 +212,7 @@
   .searchButton:hover {
     color: #000;
     font-size: 26px;
-
   }
-
 }
 
 .emptyUserText {
@@ -219,7 +236,6 @@
     }
   }
 
-
   .copyTopic {
     position: absolute;
     bottom: 20px;
@@ -229,5 +245,4 @@
     transform: translateX(-50%);
     display: none;
   }
-
 }
