fix: mobile simulator header css bugfix

--- a/src/components/MobileDemo/index.module.scss
+++ b/src/components/MobileDemo/index.module.scss
@@ -47,6 +47,11 @@ ion-card {
       font-size: 18px;
       line-height: 22px;
       color: #18181b;
+      height: 22px;
+      width: 160px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
 }
