--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -23,11 +23,13 @@
   align-items: flex-start;
   padding: 24px;
   max-width: 478px;
-  height: 370px;
   background: #FFFFFF;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
 
+  .channelList {
+    width: 100%;
+  }
   .cardWrapper {
     width: 100%;
   }
