--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -9,7 +9,7 @@
   background: #663CEE;
   color: #fff;
   border-radius: 8px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-size: 22px;
   font-weight: 400;
   cursor: pointer;
