--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 528px;
+  width: 448px;
   background: #ffffff;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
+  max-height: 670px;
+
+  .getContactsListBtn {
+    flex: 1;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 400;
+  }
 
   .contactTabs {
     width: 100%;
@@ -17,7 +25,7 @@
     border-bottom: .5px solid #f2fafa;
     .tab {
       padding: 13px 0;
-      font-family: 'Inter';
+      font-family: 'Inter', sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 16px;
