--- a/src/components/MobileDemo/index.module.scss
+++ b/src/components/MobileDemo/index.module.scss
@@ -8,7 +8,7 @@ ion-card {
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-  height: 756px;
+  height: 670px;
   background: #ffffff;
   /* shadow/Small */
 
@@ -41,7 +41,7 @@ ion-card {
     justify-content: center;
     .title {
       margin-left: 10px;
-      font-family: "Inter";
+      font-family: "Inter", sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 18px;
@@ -85,7 +85,7 @@ ion-card {
   }
   .tip {
     margin-top: 16px;
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
