--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -9,10 +9,23 @@
   max-height: 670px;
 
   .getContactsListBtn {
+    width: 60%;
     flex: 1;
     height: 40px;
     font-size: 16px;
     font-weight: 400;
+    margin: 0 auto;
+  }
+
+  .emptyContactsText {
+    margin-top: 16px;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #71717a;
   }
 
   .contactTabs {
@@ -23,6 +36,7 @@
     align-items: center;
     padding: 0 30px;
     border-bottom: .5px solid #f2fafa;
+
     .tab {
       padding: 13px 0;
       font-family: 'Inter', sans-serif;
@@ -33,7 +47,7 @@
       color: #A1A1AA;
       cursor: pointer;
       box-sizing: border-box;
-    
+
 
       &.active {
         color: #663CEE;
