--- a/src/components/ChatsPanel/index.scss
+++ b/src/components/ChatsPanel/index.scss
@@ -7,4 +7,5 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   max-height: 670px;
+  overflow: hidden;
 }
