feat: add register and login feat

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -10,14 +10,17 @@
   color: #fff;
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
-  font-size: 22px;
+  font-size: 16px;
+  // font-size: 22px;
   font-weight: 500;
   cursor: pointer;
   svg {
       margin-right: 10px;
   }
   &.disable {
-      background: #F5F0FF;
-      color: #8F6BF4;
+    background: #F5F0FF;
+    color: #8F6BF4;
+    opacity: .8;
+    cursor: not-allowed;
   }
 }
