--- a/src/components/ContactItem/ContactOperateButton/index.scss
+++ b/src/components/ContactItem/ContactOperateButton/index.scss
@@ -5,10 +5,18 @@
   font-size: 14px;
   font-weight: 500;
   border-radius: 6px;
+
   &.unfollow.hover {
     border-radius: 6px;
     border: 1px solid #FEC8C8;
     color: #EF4343;
     background: #FFF;
   }
+
+  &.following {
+    color: var(--color-gray-700, #3F3F46);
+    border: 1px solid var(--color-gray-200, #E4E4E7);
+    background: var(--color-base-white, #FFF);
+  }
 }
+
