--- a/src/containers/Login/index.scss
+++ b/src/containers/Login/index.scss
@@ -49,6 +49,10 @@
     line-height: 20px;
     color: #71717A;
 
+    .warningIcon {
+      display: inline-block;
+      vertical-align: -4px;
+    }
     .ephasis {
       cursor: pointer;
       color: #663CEE;
@@ -140,7 +144,7 @@
     }
 
     //   @include themeify {
-    //     color: themed(Gray_900);
+    //     color: #18181b;
     //   }
   }
 
@@ -159,10 +163,10 @@
     color: #ef4343;
     font-size: 12px;
     //   @include themeify {
-    //     background-color: themed(Red_50);
-    //     color: themed(Red_500);
-    //     font-weight: themed(Medium_font-weight);
-    //     font-size: themed(Caption1_font-size);
+    //     background-color: #fef1f1;
+    //     color: #ef4343;
+    //     font-weight: 500;
+    //     font-size: 12px;
     //   }
 
     .errorIcon {
