--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.modalBody {
+  width: 100%;
+  height: calc(100% - 65px);
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 0 16px;
+}
