--- a/src/containers/ChatsPanel/ChatList/index.scss
+++ b/src/containers/ChatsPanel/ChatList/index.scss
@@ -36,14 +36,13 @@
         ion-icon {
           margin-left: 8px;
         }
-  
       }
   
       .selectSearchType {
         display: none;
         position: absolute;
         left: 0;
-        top: -93px;
+        bottom: -90px;
         z-index: 99;
   
         ul {
@@ -55,6 +54,8 @@
           text-align: center;
           width: 100px;
           height: 30px;
+          text-decoration: none;
+          list-style: none;
           //background: #fff;
           background-color: rgb(236, 235, 235);
           font-size: 16px;
